--- a/estacionamento/WebContent/WEB-INF/web.xml
+++ b/estacionamento/WebContent/WEB-INF/web.xml
@@ -4,4 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <error-page>
+  	<location>/erro.jsp</location>
+  </error-page>
 </web-app>
